--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>VR 360 image galary</title>
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
   </head>
   <body>
